--- a/app/src/main/res/layout/profile_details.xml
+++ b/app/src/main/res/layout/profile_details.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res/android">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -59,22 +59,22 @@
                 android:orientation="vertical">
 
                 <com.widget.CustomTextView
-                    app:font="MuseoSansRounded-700.otf"
                     android:id="@id/profile_full_name_show"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/full_name"
                     android:textSize="22sp"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    app:font="MuseoSansRounded-700.otf" />
 
                 <com.widget.CustomTextView
-                    app:font="MuseoSansRounded-300.otf"
                     android:id="@id/profile_full_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dip"
                     android:text="@string/dummy_full_name"
-                    android:textSize="18sp" />
+                    android:textSize="18sp"
+                    app:font="MuseoSansRounded-300.otf" />
 
                 <LinearLayout
                     android:id="@id/profile_number_divider"
@@ -85,22 +85,22 @@
                     android:orientation="vertical" />
 
                 <com.widget.CustomTextView
-                    app:font="MuseoSansRounded-700.otf"
                     android:id="@id/profile_mobile_number_show"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/mobile_number"
                     android:textSize="22sp"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    app:font="MuseoSansRounded-700.otf" />
 
                 <com.widget.CustomTextView
                     android:id="@id/profile_mobile_number"
                     android:layout_width="match_parent"
-                    app:font="MuseoSansRounded-300.otf"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dip"
                     android:text="@string/dummy_mobile_number_ID"
-                    android:textSize="18sp" />
+                    android:textSize="18sp"
+                    app:font="MuseoSansRounded-300.otf" />
 
                 <LinearLayout
                     android:id="@id/profile_area_divider"
@@ -111,22 +111,22 @@
                     android:orientation="vertical" />
 
                 <com.widget.CustomTextView
-                    app:font="MuseoSansRounded-700.otf"
                     android:id="@id/profile_area_name_show"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/area_name"
                     android:textSize="22sp"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    app:font="MuseoSansRounded-700.otf" />
 
                 <com.widget.CustomTextView
-                    app:font="MuseoSansRounded-300.otf"
                     android:id="@id/profile_area_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dip"
                     android:text="@string/dummy_area_name_ID"
-                    android:textSize="18sp" />
+                    android:textSize="18sp"
+                    app:font="MuseoSansRounded-300.otf" />
 
                 <LinearLayout
                     android:id="@id/profile_blood_group_divider"
@@ -137,22 +137,22 @@
                     android:orientation="vertical" />
 
                 <com.widget.CustomTextView
-                    app:font="MuseoSansRounded-700.otf"
                     android:id="@id/profile_blood_group_show"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/blood_group"
                     android:textSize="22sp"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    app:font="MuseoSansRounded-700.otf" />
 
                 <com.widget.CustomTextView
-                    app:font="MuseoSansRounded-300.otf"
                     android:id="@id/profile_blood_group"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dip"
                     android:text="@string/dummy_blood_group_ID"
-                    android:textSize="18sp" />
+                    android:textSize="18sp"
+                    app:font="MuseoSansRounded-300.otf" />
 
                 <LinearLayout
                     android:id="@+id/profile_blood_donation_divider"
@@ -163,22 +163,23 @@
                     android:orientation="vertical" />
 
                 <com.widget.CustomTextView
-                    app:font="MuseoSansRounded-700.otf"
                     android:id="@+id/profile_blood_donation_show"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/total_donation"
                     android:textSize="22sp"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    app:font="MuseoSansRounded-700.otf" />
 
                 <com.widget.CustomTextView
-                    app:font="MuseoSansRounded-300.otf"
+
                     android:id="@+id/profile_blood_donation"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dip"
                     android:text="@string/dummy_blood_group_ID"
-                    android:textSize="18sp" />
+                    android:textSize="18sp"
+                    app:font="MuseoSansRounded-300.otf" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
