--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,68 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@id/profile_container"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#f1f1f1">
+    android:layout_height="match_parent">
 
-    <ImageView
-        android:id="@id/gradient_profile_background"
+    <android.support.v4.view.ViewPager
+        android:id="@+id/pager"
         android:layout_width="match_parent"
-        android:layout_height="120dip"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:contentDescription="@null"
-        android:src="@drawable/gradient_background" />
+        android:layout_height="match_parent" />
 
-    <LinearLayout
-        android:id="@id/linearLayout1"
-        android:layout_width="120dip"
-        android:layout_height="120dip"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="60dp"
-        android:background="@drawable/white_background">
-
-    <TextView
-            android:id="@id/avatar"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="6dip"
-            android:background="@drawable/blood_avatar"
-            android:contentDescription="@null"
-            android:gravity="center"
-            android:scaleType="fitCenter"
-            android:text="@string/dummy_blood_group_ID"
-            android:textColor="#f1f1f1"
-            android:textSize="75sp"
-            android:textStyle="bold" />
-    </LinearLayout>
-
-    <TextView
-        android:id="@id/username"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/linearLayout1"
-        android:layout_centerHorizontal="true"
-        android:text="@string/dummy_name"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textColor="#00d8ff"
-        android:textSize="30sp" />
-
-    <LinearLayout
-        android:id="@id/profile_details_header_holder"
+    <FrameLayout
+        android:id="@+id/header"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#00000000"
-        android:paddingTop="5dip"
-        android:layout_below="@id/username"
-        android:orientation="vertical">
-        <include
-            android:id="@id/profile_details_body"
-            layout="@layout/profile_details"
+        android:layout_height="@dimen/header_height">
+
+        <com.flavienlaurent.notboringactionbar.KenBurnsSupportView
+            android:id="@+id/header_picture"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"></include>
+            android:layout_height="match_parent" />
 
-    </LinearLayout>
+        <ImageView
+            android:id="@+id/header_logo"
+            android:layout_width="@dimen/header_logo_size"
+            android:layout_height="@dimen/header_logo_size"
+            android:layout_gravity="center"
+            android:src="@drawable/gradient_background" />
 
-</RelativeLayout>
+        <com.widget.PagerSlidingTabStrip
+            android:id="@+id/tabs"
+            android:layout_width="match_parent"
+            android:layout_height="48dip"
+            android:layout_gravity="bottom"
+            android:background="@android:color/transparent" />
+    </FrameLayout>
+</FrameLayout>
